fixed image alignment

--- a/index.css
+++ b/index.css
@@ -11,8 +11,8 @@ background-attachment: fixed;
 
 #PEERPHINDER {
   position: fixed;
-  top: 5%;
-  left: 40%;
+  left: 50%;
+  top: 19%;
   transform: translate(-50%, -50%);
   margin: 35px 0px 0px 0px;
 
